# 1c-ai-dev-env

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .secrets.baseline  .semgrep.yml  .spectral.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  LICENSE  README.en.md  README.md  ROADMAP.md  bandit.toml  commitlint.config.js  config-registry.json  docker-compose.yml  install.sh  manifest.json  paths.env  paths.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  session-notes.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backup-mirror.yml  ci.yml  code-scanning.yml  codeql-python.yml  codeql.yml  dast.yml  dependabot-auto-merge.yml  dependency-hygiene.yml  dependency-review.yml  docker-multi-arch.yml  mutation-testing.yml  openapi-validation.yml  release.yml  sast.yml  sbom-generation.yml  secret-scanning.yml  supply-chain.yml
adr/: 0000-template.md  0001-solo-development-path.md  0002-mcp-tools-categorization.md  0003-hybrid-search-bm25-vector.md  0004-graceful-fallback-pattern.md  0005-snapshot-testing-for-contracts.md  0006-scope-reduction-v6.md  0007-v8unpack-workaround-retention.md  0008-language-policy-russian.md  0009-architecture-refactor-strategy.md  README.md
demo/: Configuration.xml  README.md
docs/: AGENTS_MD.md  API.md  ARCHITECTURE.md  ARCHITECTURE_C4.md  AUDIT_DEAD_SCRIPTS.md  AUDIT_SCRIPTS_SERVICES.md  AUDIT_TEST_DUPLICATES.md  BACKUP_STRATEGY.md  CLEAN_TODO_REPORT.md  COMPLEXITY_BASELINE.md  DOGFOODING.md  EPF_FACTORY.md  EXAMPLES.md  FUZZING.md  GOOD_FIRST_ISSUES.md  MCP_INTEGRATION.md  METRICS.md  MIGRATION_GUIDE.md  MUTATION_BASELINE.md  PERFORMANCE.md  QUERY_INTELLIGENCE.md  QUICK_START.md  RAG_OLLAMA.md  SAAS_ARCHITECTURE.md  SECURITY_AUDIT.md  SECURITY_THREAT_MODEL.md  SNAPSHOT_TESTING.md  TASK_PROTOCOL.md  TROUBLESHOOTING.md  V8UNPACK_UPSTREAM.md  VECTOR_SEARCH.md  mcp-openapi.json
docs/1c-xml-specs/: README.md  role-dsl-spec.md
docs/research/: SUMMARY.md
docs/sphinx/: conf.py  index.rst
download/: ОбходТерриторииСПереключателемФонСоЗвукомОтБратухи.epf
experimental/: README.md
experimental/services/: plugin_manager.py
experimental/tests/: test_enterprise.py  test_plugin_system.py  test_saas_preparation.py
knowledge_base/: index.json
knowledge_base/antipatterns/: bsl_modules_async.md  common_antipatterns.md
knowledge_base/best_practices/: general_best_practices.md
knowledge_base/diagnostics/: bsl_ls_catalog.md
knowledge_base/patterns/: common_module_patterns.md  create_catalog.md  create_document.md  create_processing.md  create_skd_report.md  profit_calculation_patterns.md  register_accumulation_patterns.md  security_patterns.md  transaction_patterns.md
knowledge_base/query_optimization/: antipatterns.md  optimization_patterns.md
knowledge_base/query_standards/: field_naming_rules.md  its_query_optimization.md  its_query_rules.md  join_patterns.md  v8std_cross_reference.md  virtual_tables_guide.md
knowledge_base/standards/: its_bsl_language.md  its_code_conventions.md  its_configuration.md  its_data_exchange.md  its_data_storage.md  its_data_storage_extended.md  its_event_handlers.md  its_form_standards.md  its_localization.md  its_metadata.md  its_rest_http_integration.md  its_scheduled_jobs.md  its_security.md  its_skd_standards.md  its_transactions.md  its_ui_patterns.md
openspec/: project.md
runtime/: config-registry.json  session-state.json  task-log.md
scripts/: AUDIT.md  add_config.sh  analyzer_coverage_report.py  architecture_analyzer.py  batch_cf_extract.py  bsl-analyze.sh  build_api_reference.py  build_config_index_generic.py  build_platform_methods_index.py  build_syntax_helper_index.py  build_ut11_api_reference.py  cf_extractor.py  cf_to_xml_adapter.py  check_1c_standards.py  check_mcp_count.py  check_metadata_standards.py  check_no_scripts_imports.py  check_versions.py  code_generator.py  code_metrics.py  code_validator.py  create_obhod_epf.py  create_spisok_grafika_epf.py  diff_analyzer.py  download_transfiles.py  download_yandex.py  e2e_test_tsd.py  epf_builder.py  epf_v8unpack_builder.py  fast_search_1c.py  fix_tool_defs.py  fix_tool_workflow_hints.py  fork_all_repos.py  form_analyzer.py  form_indexer.py  form_quality_checker.py  gen_form_elem_template.py  generate_openapi.py  hbk_extractor.py  img_grid.py  (+22 more)
setup_src/: cli.py  project.py  test_configuration.py
setup_src/models/: __init__.py  config_registry.py  configuration.py
setup_src/services/: bsl_analyzer.py  config_manager.py  path_manager.py  search.py
src/: cli.py  config.py  exceptions.py  i18n.py  mcp_http_server.py  mcp_server.py  metrics.py  project.py  service_protocol.py  since.py
src/adapters/: __init__.py  protocols.py
templates/: checklist.template.md  project-context.template.md  role-switching-protocol.template.md  session-resume.template.md  soul.template.md  user-profile.md
tests/: conftest.py  test_a4_3_streaming.py  test_a4_7_vector_persistence.py  test_a4_8_hybrid_reranker.py  test_analyzer_coverage.py  test_analyzer_protocol.py  test_architecture_analyzer.py  test_ast_analyzer.py  test_async_to_thread.py  test_backup_manager.py  test_backup_strategy.py  test_benchmarks.py  test_benchmarks_infrastructure.py  test_benchmarks_r12_r13.py  test_benchmarks_synthetic.py  test_bsl_analyzer.py  test_bsl_context_checker.py  test_bsl_ls_isolation.py  test_build_api_reference.py  test_build_config_index.py  test_builders_decomposition.py  test_cache.py  test_call_graph.py  test_cf_extractor.py  test_cfe_cli.py  test_cfe_manager.py  test_check_mcp_count.py  test_check_standards.py  test_cli_bsl.py  test_cli_config.py  test_cli_update.py  test_code_metrics.py  test_code_of_conduct.py  test_complexity_budget.py  test_config.py  test_config_builder.py  test_config_manager.py  test_config_split.py  test_config_validator.py  test_configuration.py  (+136 more)
(+661 files in other folders)
