[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1c-ai-dev-env"
version = "4.11.0"
description = "Среда разработки 1С с ИИ-ассистентом"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pradushkoai"},
]
keywords = ["1c", "bsl", "ai", "development", "ide"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
rag = [
    "fastembed>=0.8.0",
    "qdrant-client>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "structlog>=24.0",
    "mcp>=1.0.0",
]

[project.scripts]
1c-ai = "src.cli:main"
1c-ai-mcp = "src.mcp_server:run_mcp_server_sync"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# ─── Ruff ───
# Современный linter + formatter (заменяет flake8 + black + isort)
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "data/",
    "derived/",
    "runtime/",
    "setup/",
    ".eggs/",
    "build/",
    "dist/",
]

[tool.ruff.lint]
# Включаем полезные группы правил
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (common pitfalls)
    "UP",   # pyupgrade (modern Python syntax)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (мы сами контролируем длину)
    "B008",   # function call in default argument (нужно для dataclasses)
    "SIM117", # nested with (читаемость)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F401",   # unused imports (могут быть в фикстурах)
    "F811",   # redefinition (pytest переопределяет)
]
"scripts/*" = [
    "B",      # bugbear слишком строг для скриптов
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ─── Mypy ───
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "data/",
    "derived/",
    "runtime/",
    "setup/",
    "build/",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["scripts.*"]
ignore_errors = true

# ─── Coverage ───
[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "*/tests/*",
    "*/setup/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 30  # стартовый порог; цель — поднять до 85
show_missing = true
skip_covered = false
