[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1c-ai-dev-env"
version = "7.0.0"
description = "Среда разработки 1С с ИИ-ассистентом"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pradushkoai"},
]
keywords = ["1c", "bsl", "ai", "development", "ide"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    # P2.14: upper bounds добавлены для предотвращения breakage при major bumps.
    # P2.13: lxml/Pillow обновлены для закрытия CVE.
    # T5.2: v8unpack обновлён с 1.2.6 до 1.2.11 (GitHub, т.к. на PyPI только 1.2.6).
    #   1.2.11 добавляет: поддержку .erf (ExternalReport), fix OverflowError для
    #   Windows FILETIME в EPF, fix base64 параметров.
    #   ВАЖНО: баг block_size TOC (ADR-0007) НЕ исправлен в 1.2.11 — workaround
    #   patch_epf_blocksize.py по-прежнему нужен. Native EPF packer (T5.1) актуален.
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.0,<26.0",
    "networkx>=3.0,<4.0",
    "v8unpack @ git+https://github.com/saby-integration/v8unpack.git@main#egg=v8unpack",
]

[project.optional-dependencies]
rag = [
    "fastembed>=0.8,<1.0",
    "qdrant-client>=1.0,<2.0",
]
mcp = [
    "mcp>=1.0,<2.0",
]
mcp-http = [
    "mcp>=1.0,<2.0",
    "uvicorn>=0.27,<1.0",
    "starlette>=0.37,<2.0",
]
metrics = [
    "prometheus-client>=0.20,<1.0",
]
# P1-A: AST-based BSL parsing через tree-sitter-bsl
# Устанавливается через: pip install -e ".[ast]"
# Без него bsl_ast.py и bsl_tree_sitter.py работают в regex-fallback режиме
ast = [
    "tree-sitter>=0.25,<1.0",
    "tree-sitter-bsl>=0.1,<1.0",
]
# Phase A.0: SDBL AST parsing через ANTLR4 (язык запросов 1С)
# Устанавливается через: pip install -e ".[query]"
# Требует Java для генерации Python target (однократно)
# Без него sdbl_parser.py недоступен, fallback на regex query_parser.py
query = [
    "antlr4-python3-runtime>=4.13,<5.0",
]
test = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "pytest-benchmark>=4.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "hypothesis>=6.0,<7.0",
    # P2.13: CVE-2022-2309 (NULL deref), обновлено с 4.9 → 5.0+
    "lxml>=5.0,<6.0",
    # P2.13: CVE-2023-50447 (arbitrary code execution via TIFF), обновлено с 10.0 → 10.2+
    "Pillow>=10.2.0,<12.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "pytest-benchmark>=4.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "hypothesis>=6.0,<7.0",
    "lxml>=5.0,<6.0",
    "Pillow>=10.2.0,<12.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<5.0",
    "structlog>=24.0,<26.0",
    "mcp>=1.0,<2.0",
    "networkx>=3.0,<4.0",
    "v8unpack @ git+https://github.com/saby-integration/v8unpack.git@main#egg=v8unpack",
    # P0.3: complexity budget + mutation testing
    "radon>=6.0,<7.0",
    "mutmut>=3.0,<4.0",
    # P1.7: dependency hygiene
    "pip-audit>=2.0,<3.0",
    "safety>=3.0,<4.0",
    "pip-licenses>=5.0,<6.0",
    # S8.4: SAST tools — bandit (Python AST analyzer) + semgrep (multi-language)
    "bandit>=1.7,<2.0",
    "semgrep>=1.50,<2.0",
    # P1.6: snapshot testing для MCP tools
    "pytest-snapshot>=0.9,<1.0",
    # P2.8: fuzzing для парсеров
    "atheris>=3.0,<4.0",
]

# P0.3: Mutation testing configuration
[tool.mutmut]
paths_to_mutate = ["src/services/"]
tests_dir = "tests/"
do_not_mutate = ["__init__.py", "__main__.py"]

[project.scripts]
1c-ai = "src.cli:main"
1c-ai-mcp = "src.mcp_server:run_mcp_server_sync"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Этап 5.3: smoke-тесты для критических путей
markers = [
    "smoke: critical path tests (run with: pytest -m smoke)",
]
# pytest-benchmark настройки (только поддерживаемые INI опции)
benchmark_min_rounds = 5
benchmark_min_time = "0.000005"
benchmark_warmup = "off"
benchmark_sort = "name"

# ─── Ruff ───
# Современный linter + formatter (заменяет flake8 + black + isort)
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "data/",
    "derived/",
    "runtime/",
    "setup/",
    ".eggs/",
    "build/",
    "dist/",
    # Этап 0.1: experimental/ не линтуется (заморожено, ADR-0006)
    "experimental/",
]

[tool.ruff.lint]
# Включаем полезные группы правил
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (common pitfalls)
    "UP",   # pyupgrade (modern Python syntax)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (мы сами контролируем длину)
    "B008",   # function call in default argument (нужно для dataclasses)
    "SIM117", # nested with (читаемость)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F401",   # unused imports (могут быть в фикстурах)
    "F811",   # redefinition (pytest переопределяет)
    "F841",   # unused local variables (часто нужны для side-effect assertions)
    "SIM102", # collapsible-if (читаемость в тестах)
    "SIM105", # suppressible-exception (try-except-pass ок в тестах)
    "SIM108", # ternary operator (if-else читаемее в тестах)
    "SIM115", # open-file-with-context-handler (часто нужно для тестирования)
    "SIM116", # if-else-block-instead-of-dict-lookup (читаемость)
    "E402",   # module-import-not-at-top (sys.path manipulation)
    "E741",   # ambiguous-variable-name (l, I, O — ок в тестах)
    "I001",   # import sort (tests/ часто имеет специальные импорты)
]
"scripts/*" = [
    "B",      # bugbear слишком строг для скриптов
    "F401",   # unused imports (скрипты часто импортируют для side-effects)
    "F841",   # unused local variables
    "E741",   # ambiguous variable name (l, I, O)
    "SIM102", # collapsible-if (читаемость в скриптах)
    "SIM105", # suppressible-exception (try-except-pass ок в скриптах)
    "SIM108", # ternary operator
    "SIM115", # open-file-with-context-handler (ок в CLI утилитах)
    "SIM116", # if-else-block-instead-of-dict-lookup (читаемость)
    "E402",   # module-import-not-at-top (sys.path manipulation)
    "C401",   # unnecessary-generator-set
    "C416",   # unnecessary-comprehension
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ─── Mypy ───
[tool.mypy]
python_version = "3.10"
warn_return_any = true  # Этап 3.1: включено глобально
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
# Этап 3.2: disallow_any_generics пока false — 243 type-arg ошибок (216 dict + 26 list).
# Включение требует параметризации всех dict/list в 63 файлах — gradual typing.
# См. план: включать по модулям через overrides.
exclude = [
    "data/",
    "derived/",
    "runtime/",
    "setup/",
    "build/",
    # Этап 0.1: experimental/ не проверяется mypy (заморожено, ADR-0006)
    "experimental/",
]

# P2.8: gradual strict typing
# P0.2: все модули теперь проходят mypy с disallow_untyped_defs (97→0 errors)
# Этап 3.1: warn_return_any = true (включено, не добавляет новых ошибок)
# Этап 3.2: disallow_any_generics = false (пока — задача 3.2)
[[tool.mypy.overrides]]
module = [
    "src.cli.*",
    "src.cli_commands.*",
    "src.dsl.*",
    "src.exceptions",
    "src.i18n",
    "src.mcp_server",
    "src.mcpserver.*",
    "src.metrics",
    "src.models.*",
    "src.project",
    "src.services.*",
]
disallow_untyped_defs = true
warn_return_any = true  # Этап 3.1: включено
disallow_any_generics = true  # F1.1 (2026-07-05): включено глобально — 246 bare generics параметризованы

# ─── Coverage ───
[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "*/tests/*",
    "*/setup/*",
    # Этап 0.1: experimental/ не входит в coverage (заморожено, ADR-0006)
    "experimental/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 72  # Этап 5.2: поднят с 70 → 72 (добавлены тесты для metrics.py и cfe/cli.py)
show_missing = true
skip_covered = false
